# rust-examples

./: README.md
axum/: README.md
axum/hello/: Cargo.toml
axum/hello/src/: main.rs
axum/tls/: .gitignore  Cargo.toml  README.md
axum/tls/src/: main.rs
c-rust-ffi/cc/rust_app/: Cargo.toml  build.rs
c-rust-ffi/cc/rust_app/src/: main.rs
c-rust-ffi/ffi/: Makefile  run.sh
c-rust-ffi/ffi/c_lib/: Makefile  hello.c  hello.h
c-rust-ffi/ffi/c_lib_shared/: Makefile  hello.c  hello.h
c-rust-ffi/ffi/rust_app/: build.rs
c-rust-ffi/ffi/rust_app/src/: main.rs
cross-compilation/: README.md
cross-compilation/hello/: Cargo.toml  Makefile
log/: README.md
log/hello/: Cargo.toml
log/hello/src/: main.rs
mdns/myapp/: Cargo.toml  README.md
mdns/myapp/src/: client.rs  server.rs
multithread/producer-worker/: Cargo.toml
multithread/producer-worker/src/: main.rs
multithread/producer-worker/src/pipeline/: mod.rs  producer.rs  worker.rs
network/info/: Cargo.toml  README.md
network/info/src/: main.rs
quick_xml/: README.md
quick_xml/hello/: Cargo.toml  example.xml
quick_xml/hello/src/: main.rs
rdev/: README.md
rdev/example/: Cargo.toml
rdev/example/src/: main.rs
reqwest/: README.md
reqwest/hello/: Cargo.toml  README.md
string/: README.md
string/samples/src/: main.rs
thread/: README.md
thread/example/src/: main.rs
