[package]
name = "myapp"
version = "0.1.0"
edition = "2024"

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="client"
path="src/client.rs"

[dependencies]
axum = "0.8.9"
hostname = "0.4.2"
local-ip-address = "0.6.11"
mdns-sd = "0.19.0"
reqwest = {version = "0.13.2", features = ["json"]}
serde = "1.0.228"
tokio = {version = "1.52.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
